--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ p {
 .table-custom tbody tr td {
     padding: 0px;
     border-top: none !important;
+    padding-left: 25px;
 }
 .italic {
     font-style: italic;
